--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "postcss": "^8.4.18",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.8.2",
+    "prettier": "^3.2.5",
     "react-intersection-observer": "^9.4.4",
     "react-redux": "^8.0.4",
     "react-refresh": "^0.12.0",
